# RADJAX-Contract

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARTIFACT_SCHEMAS.md  IMPORT_BOUNDARIES.md  ROADMAP.md  SPLIT_INTEGRITY.md  VOCAB_CONTRACT.md
src/radjax_contract/: __init__.py
src/radjax_contract/artifacts/: __init__.py  manifest.py
src/radjax_contract/io/: __init__.py  arrays.py  json.py  jsonl.py
src/radjax_contract/provenance/: __init__.py  hashes.py  lineage.py  split_integrity.py
src/radjax_contract/schemas/: cascaded_soft_labels_v1.json  checkpoint_manifest_v0.json  fingerprint_artifact_v0.json  student_artifact_v0.json  target_store_v0.json  teacher_tome_v0.json
src/radjax_contract/tome/: __init__.py  compression.py  cover_page.py  inspection.py  manifest.py  payloads.py  records.py  shards.py  validation.py
src/radjax_contract/validation/: __init__.py  _result.py  validate_fingerprint_artifact.py  validate_split_integrity.py  validate_student_artifact.py  validate_target_store.py  validate_teacher_tome.py
src/radjax_contract/vocab/: __init__.py  contract.py
tests/: test_hashes.py  test_import.py  test_import_boundaries.py  test_manifest_vocab.py  test_split_integrity.py  test_tome_cover_page.py  test_tome_inspection.py  test_tome_manifest.py  test_tome_records.py  test_tome_split_disjointness.py  test_tome_validation_dense_logits.py  test_vocab_contract.py  tome_helpers.py
